--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<body>
+<body  style="background-color:rgb(0, 255, 221);">
     <title>Search Page</title>
     <div class="content">
         <h1 style="text-align: center">Search</h1>
     
-        <div class="form">
-            <form action="/weatherapp" method="POST">
-                <label for='city'>enter city: <label>
-                <input type="text" name="city" id="city">
+        <div class="form" style=" margin-left:550px; margin-top: 50px;padding: 40px;">
+            <form action="/weatherapp" method="POST"  >
+                <label for='city'>Enter city: <label><br>
+                    <br>
+                <input type="text" name="city" id="city" Required Placeholder="Enter city"><br>
+                <br>
 
-                <label for='units'>Enter Units: <label>
-                <input type="text" name="units" id="units">
-                <label for='appid'>Enter your API KEY: <label>
-                <input type="text" name="appid" id="appid">
-                <input type="submit" value="Search">
+                <label for='units'>Enter Units: <label><br>
+                    <br>
+                <input type="text" name="units" id="units"Required Placeholder="Enter Unit"><br>
+                <br>
+                <label for='appid'>Enter your API KEY: <label><br>
+                    <br>
+                <input type="text" name="appid" id="appid" Required Placeholder="Enter Id"><br>
+                <br>
+                <input type="submit" value="Search" ><br>
             </form>
         </div>
     </div>
+    
 </body>
 </html>
